fix broken spacing due to font change

--- a/styles/mystyle.css
+++ b/styles/mystyle.css
@@ -4,7 +4,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: sans-serif;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif, sans-serif;
 }
 
 body {
@@ -52,16 +52,16 @@ body {
 }
 
 .text > p {
-    font-size: 16px;
+    font-size: 18px;
     color: #E5E7EB;
 }
 
 .text > button {
     text-align: center;
-    padding: 7px 30px 7px 30px;
+    padding: 6px 35px 6px 35px;
     border: none;
     border-radius: 6px;
-    font-size: 15px;
+    font-size: 17px;
     font-weight: bold;
     margin-top: 10px;
     color: #EEEEEE;
@@ -75,13 +75,13 @@ body {
 }
 
 .logo {
-    font-size: 12px;
+    font-size: 10px;
     color: #F9FAF8;
 }
 
 .right > .image {
     display: flex;
-    margin-bottom: -18px;
-    margin-left: -75px;
+    margin-bottom: -51px;
+    margin-left: -50px;
     flex-shrink: 2;
 }
